# arui-core

./: Cargo.toml  README.md  rustfmt.toml
src/: errors.rs  lib.rs  tree.rs  utils.rs
src/tree/: config.rs  node.rs  root.rs  summary.rs  visible.rs
src/tree/node/: count.rs  file.rs
tests/: tree.rs
tests/examples/: READEME.md
tests/examples/tree/node/count/get_file_count/: test.rs
tests/examples/tree/node/file/: test_get_file_size.txt
tests/examples/tree/summary/: test.js
