[package]
name = "arui-core"
description = "A project tree analyzer for code metrics and file system statistics"
version = "0.0.1"
authors = ["Feudalman <feuclalman@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Feudalman/arui-core"
readme = "README.md"
keywords = ["project", "tree", "analyzer", "code", "metrics"]
categories = [
  "development-tools",
  "development-tools::profiling",
  "filesystem"
]

[dependencies]
thiserror = "2.0.12"
derive_builder = "0.20.2"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]